Merlin Pass/force-app/main/default/objects/Pass__c/Pass__c.object-meta.xml
<CustomObject>
    <description>This object is used to store pass detail</description>
    <label>Pass</label>
    <nameField>
        <displayFormat>MP-{0000000}</displayFormat>
        <label>Pass Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>