Merlin Pass/force-app/main/default/objects/Pass__c/fields/Date_Of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Travel__c</fullName>
    <formula>Customer__r.Expected_Date_Of_Travel__c</formula>
    <label>Date Of Travel</label>
    <type>Date</type>
</CustomField>