Merlin Pass/force-app/main/default/objects/Pass__c/fields/Expected_Weather__c.field-meta.xml
<CustomField>
    <fullName>Expected_Weather__c</fullName>
    <description>This shows expected weather dates on dates of travel</description>
    <inlineHelpText>This shows expected weather dates on dates of travel</inlineHelpText>
    <label>Expected Weather</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>