Merlin Pass/force-app/main/default/objects/Pass__c/fields/Price_del__c.field-meta.xml
<CustomField>
    <fullName>Price_del__c</fullName>
    <formula>Payment__r.Net_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>