Merlin Pass/force-app/main/default/objects/Pass__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=https://wiprotechnology-3e-dev-ed.lightning.force.com/lightning/r/Pass_c/&quot;+Id +&quot;/view&quot;,&quot;QR code&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>